--- a/labs/cicd-automation/jenkins/Jenkinsfile
+++ b/labs/cicd-automation/jenkins/Jenkinsfile
@@ -1,8 +1,8 @@
 def  appName = 'service-tracker-ui'
 def  feSvcName = "${appName}"
 def  ACRPATH = 'hackfest'
-def  ACRNAME = 'mstrossacr'
-def  ACRURL = 'azurecr.io'
+def  ACRNAME = 'acrhackfestseliguzel20157'
+def  ACRURL = 'crhackfestseliguzel20157.azurecr.io'
 def  imageTag = "${env.BRANCH_NAME}.${env.BUILD_NUMBER}"
 
 pipeline {
